# arca

./: .gitmodules  README.md  devcontainer.json
.devcontainer/: Dockerfile  devcontainer.json
arca/: CMakeLists.txt  package.xml
arca-firmware/: platformio.ini
arca-firmware-rust/: Cargo.toml
arca-firmware-rust/.cargo/: config.toml
arca-firmware-rust/src/: main.rs
arca-firmware-rust/tools/: runner.rs
arca-sim/: MUJOCO_LOG.TXT  README.md  pyproject.toml
arca-sim/arca_sim/: robot.py  robot_model.py  sim.py
arca-sim/models/full/mjcf/: config.json  extras.xml  robot.xml
arca-sim/models/full/mjcf/assets/: 5972k222_ball_bearing.part  5972k222_ball_bearing__2.part  59935k13_ball_joint_rod_end.part  59935k13_ball_joint_rod_end__2.part  6656k118_ultra_thin_ball_bearing.part  6656k118_ultra_thin_ball_bearing.stl  ankle.part  ankle__2.part  ankle__3.part  ankle__3.stl  ankle__4.part  foot.part  hip_arm__length_0_03_meter.part  hip_arm__length_0_03_meter.stl  hip_arm__length_0_04_meter.part  hip_arm__length_0_04_meter.stl  hip_arm__length_0_05_meter.part  hip_arm__length_0_05_meter.stl  l_inner_arm.part  l_inner_plate.part  l_outer_arm.part  l_outer_plate.part  l_outer_plate.stl  lower_carriage.part  m2006_p36_3.part  m2006_p36_3__2.part  m2006_p36_3__3.part  part_1.part  part_1.stl  part_3.part  part_3__2.part  part_3__2.stl  part_3__length_0_0525_meter.part  part_3__length_0_0525_meter.stl  part_3__length_0_12_meter.part  r_inner_arm.part  r_inner_arm.stl  r_outer_arm.part  r_thigh_outer_plate.part  standoff.part  (+4 more)
arca-sim/models/full/mjcf/assets/merged/: foot_2_collision.stl  foot_7_collision.stl  foot_collision.stl  hip_arm__configuration_default_2_visual.stl  hip_arm__configuration_default_4_visual.stl  hip_arm__configuration_default_visual.stl  hip_arm__length_0_04_meter_2_collision.stl  hip_arm__length_0_04_meter_collision.stl  knee_arm__length_0_04_meter_2_collision.stl  knee_arm__length_0_04_meter_collision.stl  l_foot_2_collision.stl  l_knee_2_visual.stl  l_knee_4_visual.stl  l_knee_visual.stl  l_thigh_collision.stl  linkage__43d788dc267bdd7f4fb3b94dc32a7642_3_visual.stl  linkage__43d788dc267bdd7f4fb3b94dc32a7642_visual.stl  linkage__configuration_default_length_0_12_meter_2_collision.stl  linkage__configuration_default_length_0_12_meter_collision.stl  part_1_collision.stl  r_foot_2_visual.stl  r_foot_visual.stl  r_knee_2_visual.stl  r_knee_3_collision.stl  r_knee_collision.stl  r_thigh_lower_mount_visual.stl  r_thigh_visual.stl  thigh_lower_mount_collision.stl  thigh_lower_mount_visual.stl  trunk_collision.stl  trunk_visual.stl
arca-sim/models/mjcf/: scene.xml
arca-sim/models/reduced/mjcf/: config.json
arca-sim/models/reduced/mjcf/assets/: 5972k222_ball_bearing.stl  5972k222_ball_bearing__2.part  foot.stl  lower_carriage.part  part_4__hip_arm_angle_2_356194490192345_radian.part  part_7__hip_arm_angle_2_356194490192345_radian.stl  part_8__hip_arm_angle_2_356194490192345_radian.part  thigh_outer__hip_arm_angle_2_356194490192345_radian.stl
arca-sim/models/urdf/: config.json
arca-sim/scripts/: import_robot.py  sim.py  test_serialization.py  view_model.py  view_model_pinocchio.py
arca-sim/src/arca_sim/: controller.py  main.py  robot.py  robot_model.py  sim.py  sim2.py  sim_utils.py  state.py  timing.py  util.py
arca-sim/src/arca_sim/tests/: test_joints_vector.py
arca_control/: README.md  test.ipynb
(+143 files in other folders)
