[package]
name = "arca-firmware-rust"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
Firmware for the Arca bipedal robot
"""
categories.workspace = true
keywords.workspace = true
autoexamples = false

[workspace.package]
authors = ["Stephen Welch <stephenwelch@vt.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StephenWelch/arca"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "teensy4",
]

[workspace]
members = [
    "tools",
]

# This is a convenience for building examples.
# When a user builds _all_ of the examples with
# all features, there's likely to be a duplicate
# definition linker error, since both RTIC and the
# BSP define USB_OTG1. The linker can figure out
# which one is actually used when LTO is on.
[profile.dev]
lto = "thin"

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[dependencies]
defmt = "0.3.6"
embedded-hal = "0.2"
log = "0.4"
nb = "1"
cortex-m-rtic = "1.1.4"
teensy4-panic = "0.2"

[dependencies.teensy4-bsp]
version = "0.4.7"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

