[project]
name = "arca-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eclipse-zenoh>=1.3.4",
    "mujoco==3.3.2",
    "numpy>=2.2.5",
    "onshape-to-robot",
    "pymeshlab>=2023.12.post3",
]

[tool.uv.sources]
onshape-to-robot = { git = "https://github.com/Rhoban/onshape-to-robot.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/arca_sim"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]